--- a/css/style.css
+++ b/css/style.css
@@ -54,18 +54,33 @@ body{
     }
 }
 .greetings > span:nth-child(2){
-    animation-delay: .2s ;
+    animation-delay: .1s ;
 }
 .greetings > span:nth-child(3){
-    animation-delay: .4s ;
+    animation-delay: .2s ;
 }
 .greetings > span:nth-child(4){
-    animation-delay: .6s;
+    animation-delay: .3s;
 }
 .greetings > span:nth-child(5){
-    animation-delay: .8s;
+    animation-delay: .4s;
 }
 .greetings > span:nth-child(6){
+    animation-delay: .5s;
+}
+.greetings > span:nth-child(7){
+    animation-delay: .6s ;
+}
+.greetings > span:nth-child(8){
+    animation-delay: .7s ;
+}
+.greetings > span:nth-child(9){
+    animation-delay: .8s;
+}
+.greetings > span:nth-child(10){
+    animation-delay: .9s;
+}
+.greetings > span:nth-child(11){
     animation-delay: 1s;
 }
 
